[gd_scene load_steps=12 format=3 uid="uid://87531y6uu4th"]

[ext_resource type="Script" path="res://scenes/worm.gd" id="1_2u18f"]
[ext_resource type="Texture2D" uid="uid://bvuf2uingc8ik" path="res://assets/graphics/Enemies/worm/0.png" id="1_byj2d"]
[ext_resource type="Texture2D" uid="uid://d4kdspe8cixor" path="res://assets/graphics/Enemies/worm/1.png" id="2_28okr"]
[ext_resource type="Shader" path="res://scenes/flicker.gdshader" id="2_gv34k"]
[ext_resource type="AudioStream" uid="uid://dss3xqj8u01mj" path="res://assets/audio/shot_01.ogg" id="5_lva2s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ekgqf"]
resource_local_to_scene = true
shader = ExtResource("2_gv34k")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_h6aid"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_byj2d")
}, {
"duration": 1.0,
"texture": ExtResource("2_28okr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5wks"]
size = Vector2(11, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hh4p1"]
size = Vector2(15, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fujpe"]
size = Vector2(3, 2.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbqjo"]
size = Vector2(3, 2.5)

[node name="Worm" type="Area2D"]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_2u18f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ekgqf")
sprite_frames = SubResource("SpriteFrames_h6aid")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_x5wks")

[node name="BorderArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderArea"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_hh4p1")

[node name="CliffAreaRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CliffAreaRight"]
position = Vector2(7, 5)
shape = SubResource("RectangleShape2D_fujpe")

[node name="CliffAreaLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CliffAreaLeft"]
position = Vector2(-8, 5.25)
shape = SubResource("RectangleShape2D_jbqjo")

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lva2s")
